<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/fondo_generico_sin_texto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginBottom="10dp"
        android:gravity="bottom|start"
        android:text="@string/configuracion"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/desconectarBirdi"
        style="@style/Boton_Config"
        android:layout_weight="20"
        android:drawableRight="@drawable/bluetooth_off"
        android:text="@string/desconectarBirdi"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="174dp"/>

    <ToggleButton
        android:id="@+id/sonido_en_menus"
        style="@style/Boton_Config"
        android:layout_weight="20"
        android:drawableRight="@drawable/img_sound_off"
        android:textOff="@string/sonido_en_menus_no"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="174dp"/>

    <ToggleButton
        android:id="@+id/voces_en_textos"
        style="@style/Boton_Config"
        android:drawableRight="@drawable/img_sound_off"
        android:textOff="@string/voces_en_texto_no"
        android:layout_weight="20"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="174dp"/>

    <ToggleButton
        android:id="@+id/presion_en"
        style="@style/Boton_Config"
        android:layout_weight="20"
        android:drawableRight="@drawable/agua2"
        android:textOff="@string/presion_en_mmHg_no"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="174dp"/>

    <Button
        android:id="@+id/cambiar_usuario"
        style="@style/Boton_Config"
        android:layout_weight="20"
        android:drawableRight="@drawable/usuario_2"
        android:text="@string/cambiar_usuario"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="174dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="88dp"
            android:layout_height="63dp"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/salir"/>
    </LinearLayout>


</LinearLayout>