<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.birdisolutions.birdikegel.MainActivity"
    android:background="@drawable/fondo_menu_principal_sin_texto">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="47dp"
        android:text="@string/ejercicios_para_hoy"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:text="@string/ejercicios_libres"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2"/>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="367dp"
        android:layout_height="164dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:scrollbars="none"
        tools:layout_editor_absoluteX="9dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton_suave"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/suave_2"
                android:gravity="bottom|center"
                android:paddingBottom="15dp"
                android:scaleType="fitCenter"
                android:text="@string/suave"
                android:textAllCaps="false"
                android:textColor="@color/colorBlanco"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/boton_medio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/medio"
                android:gravity="bottom|center"
                android:paddingBottom="15dp"
                android:scaleType="fitCenter"
                android:text="@string/medio"
                android:textAllCaps="false"
                android:textColor="@color/colorBlanco"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/boton_intenso"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/intenso_2"
                android:gravity="bottom|center"
                android:paddingBottom="15dp"
                android:scaleType="fitCenter"
                android:text="@string/intenso"
                android:textAllCaps="false"
                android:textColor="@color/colorBlanco"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/boton_rapido"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rapido"
                android:gravity="bottom|center"
                android:paddingBottom="15dp"
                android:scaleType="fitCenter"
                android:text="@string/rapido"
                android:textAllCaps="false"
                android:textColor="@color/colorBlanco"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/boton_resistencia"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/resistencia"
                android:gravity="bottom|center"
                android:paddingBottom="15dp"
                android:scaleType="fitCenter"
                android:text="@string/resistencia"
                android:textAllCaps="false"
                android:textColor="@color/colorBlanco"
                android:textSize="18sp"/>

        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="373dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="460dp"
        tools:layout_editor_absoluteX="3dp">

        <Button
            android:id="@+id/boton_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:background="@drawable/ajustes"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp"/>

        <ImageButton
            android:id="@+id/boton_mensajes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/mensajes"/>

        <ImageButton
            android:id="@+id/boton_salir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/salir"/>

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="368dp"
        android:layout_height="162dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18"
            tools:layout_editor_absoluteX="-8dp">

            <Button
                android:id="@+id/boton_no_ejercicios"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/icono_pop_up"
                android:gravity="bottom|center"
                android:paddingBottom="15dp"
                android:scaleType="fitCenter"
                android:text="@string/boton_ejercicios_para_hoy"
                android:textAllCaps="false"
                android:textColor="@color/colorBlanco"
                android:textSize="18sp"/>
        </LinearLayout>
    </HorizontalScrollView>

</android.support.constraint.ConstraintLayout>
